implemented "save selected links" and "Add URLs"

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -7,6 +7,10 @@
         "message": "Save page with SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
+    "menuSaveSelectedLinks": {
+        "message": "Save selected links",
+        "description": "Menu entry: 'Save selected links'"
+    },
     "menuViewPendingSaves": {
         "message": "View pending saves...",
         "description": "Menu entry: 'View pending saves...'"
@@ -371,18 +375,18 @@
         "message": "save to Google Drive",
         "description": "Options page label: 'save to Google Drive'"
     },
-	"optionSaveCreatedBookmarks": {
-		"message": "save the page of a newly created bookmark",
-		"description": "Options page label: 'save the page of a newly created bookmark'"
-	},
+    "optionSaveCreatedBookmarks": {
+        "message": "save the page of a newly created bookmark",
+        "description": "Options page label: 'save the page of a newly created bookmark'"
+    },
     "optionsHelpLink": {
         "message": "help",
         "description": "Options help link"
     },
-	"optionSynchronize": {
-		"message": "synchronize options",
-		"description": "Options label: 'synchronize options'"
-	},
+    "optionSynchronize": {
+        "message": "synchronize options",
+        "description": "Options label: 'synchronize options'"
+    },
     "optionsResetButton": {
         "message": "Reset",
         "description": "Options button: 'Reset'"
@@ -502,5 +506,21 @@
     "pendingsNoPendings": {
         "message": "No pending saves",
         "description": "Label displayed when they are no pending saves"
+    },
+    "pendingsAddUrlsButton": {
+        "message": "Add URLs",
+        "description": "button 'Add URLs'"
+    },
+    "pendingsAddUrls": {
+        "message": "Enter a list of URLs separated by a new line",
+        "description": "Label of the add URLs input"
+    },
+    "pendingsAddUrlsOKButton": {
+        "message": "OK",
+        "description": "Add URLs popup confirm button: 'OK'"
+    },
+    "pendingsAddUrlsCancelButton": {
+        "message": "Cancel",
+        "description": "Add URLs popup cancel button: 'Cancel'"
     }
 }
