--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -7,6 +7,10 @@
         "message": "Speichern einer Webseite mit SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
+	"menuSaveSelectedLinks": {
+		"message": "Speichern ausgewählter Links",
+		"description": "Menu entry: 'Save selected links'"
+	},
     "menuViewPendingSaves": {
         "message": "Anzeigen der aktuellen Speichern...",
         "description": "Menu entry: 'View pending saves...'"
@@ -502,5 +506,21 @@
     "pendingsNoPendings": {
         "message": "No pending saves",
         "description": "Label displayed when they are no pending saves"
-    }
+    },
+	"pendingsAddUrlsButton": {
+		"message": "Add URLs",
+		"description": "button 'Add URLs'"
+	},
+	"pendingsAddUrls": {
+		"message": "Enter a list of URLs separated by a new line",
+		"description": "Label of the add URLs input"
+	},
+	"pendingsAddUrlsOKButton": {
+		"message": "OK",
+		"description": "Add URLs popup confirm button: 'OK'"
+	},
+	"pendingsAddUrlsCancelButton": {
+		"message": "Abbrechen",
+		"description": "Add URLs popup cancel button: 'Cancel'"
+	}
 }
