--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -7,6 +7,10 @@
         "message": "Zapisz stronę z SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
+	"menuSaveSelectedLinks": {
+		"message": "Save selected links",
+		"description": "Menu entry: 'Save selected links'"
+	},
     "menuViewPendingSaves": {
         "message": "Zobacz oczekujące zapisy...",
         "description": "Menu entry: 'View pending saves...'"
@@ -502,5 +506,21 @@
     "pendingsNoPendings": {
         "message": "Brak oczekujących zapisów",
         "description": "Label displayed when they are no pending saves"
-    }
+    },
+	"pendingsAddUrlsButton": {
+		"message": "Add URLs",
+		"description": "button 'Add URLs'"
+	},
+	"pendingsAddUrls": {
+		"message": "Enter a list of URLs separated by a new line",
+		"description": "Label of the add URLs input"
+	},
+	"pendingsAddUrlsOKButton": {
+		"message": "OK",
+		"description": "Add URLs popup confirm button: 'OK'"
+	},
+	"pendingsAddUrlsCancelButton": {
+		"message": "Cancel",
+		"description": "Add URLs popup cancel button: 'Cancel'"
+	}
 }
