--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -7,6 +7,10 @@
         "message": "使用 SingleFileZ 保存页面",
         "description": "菜单项: '使用 SingleFileZ 保存页面'"
     },
+	"menuSaveSelectedLinks": {
+		"message": "Save selected links",
+		"description": "Menu entry: 'Save selected links'"
+	},
     "menuViewPendingSaves": {
         "message": "View pending saves...",
         "description": "Menu entry: 'View pending saves...'"
@@ -503,7 +507,20 @@
         "message": "No pending saves",
         "description": "Label displayed when they are no pending saves"
     },
-    "__WET_LOCALE__": {
-        "message": "zh-cn"
-    }
+	"pendingsAddUrlsButton": {
+		"message": "Add URLs",
+		"description": "button 'Add URLs'"
+	},
+	"pendingsAddUrls": {
+		"message": "Enter a list of URLs separated by a new line",
+		"description": "Label of the add URLs input"
+	},
+	"pendingsAddUrlsOKButton": {
+		"message": "OK",
+		"description": "Add URLs popup confirm button: 'OK'"
+	},
+	"pendingsAddUrlsCancelButton": {
+		"message": "Cancel",
+		"description": "Add URLs popup cancel button: 'Cancel'"
+	}
 }
