--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -379,10 +379,10 @@
         "message": "zapisuj stronę nowo utworzonej zakładki",
         "description": "Options page label: 'save the page of a newly created bookmark'"
     },
-	"optionReplaceBookmarkURL": {
-		"message": "link the new bookmark to the saved page",
-		"description": "Options page label: 'link the new bookmark to the saved page'"
-	},
+    "optionReplaceBookmarkURL": {
+        "message": "łącz nową zakładkę z zapisaną stroną",
+        "description": "Options page label: 'link the new bookmark to the saved page'"
+    },
     "optionsHelpLink": {
         "message": "pomoc (w języku angielskim)",
         "description": "Options help link"
