--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -388,8 +388,8 @@
 		"description": "Options page label: 'save the page of a newly created bookmark'"
 	},
 	"optionReplaceBookmarkURL": {
-		"message": "link the new bookmark to the saved page",
-		"description": "Options page label: 'link the new bookmark to the saved page'"
+		"message": "связать новую закладку с сохранённой страницей",
+		"description": "Options page label: 'связать новую закладку с сохранённой страницей'"
 	},
 	"optionsHelpLink": {
 		"message": "помощь",
