--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -160,7 +160,7 @@
         "description": "Options page label: 'template'"
     },
     "optionFilenameMaxLength": {
-        "message": "max length (bytes)",
+        "message": "最大長度（字節）",
         "description": "Options page label: 'max length (bytes)'"
     },
     "optionConfirmFilename": {
@@ -372,7 +372,7 @@
         "description": "Options page label: 'set a maximum size for embedded resources'"
     },
     "optionMaxResourceSize": {
-        "message": "大小上限（MB）",
+        "message": "大小上限（兆字節）",
         "description": "Options page label: 'maximum size (MB)'"
     },
     "optionSaveRawPage": {
@@ -448,7 +448,7 @@
         "description": "Label 'Step' (for 'Step x / 4') in the log panel"
     },
     "logPanelWidth": {
-        "message": "115",
+        "message": "122",
         "description": "Width of the log panel in pixels, it should be adjusted for the longest label beginning with 'log' (e.g. 'logPanelDeferredImages')"
     },
     "profileDefaultSettings": {
