added option "filename conflict resolution" > "skip duplicate files" (cf #49)

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -183,6 +183,10 @@
         "message": "preguntar por un nombre",
         "description": "Value for 'name conflict resolution' option: 'prompt for a name'"
     },
+    "optionFilenameConflictActionSkip": {
+        "message": "saltar los archivos duplicados",
+        "description": "Value for 'filename conflict resolution' option: 'skip duplicate files'"
+    },
     "optionsHTMLContentSubTitle": {
         "message": "Contenido HTML",
         "description": "Options sub-title: 'HTML content'"
