--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -183,6 +183,10 @@
         "message": "demander un nom de fichier",
         "description": "Value for 'filename conflict resolution' option: 'prompt for a filename'"
     },
+    "optionFilenameConflictActionSkip": {
+        "message": "passer les fichiers en double",
+        "description": "Value for 'filename conflict resolution' option: 'skip duplicate files'"
+    },
     "optionsHTMLContentSubTitle": {
         "message": "Contenu HTML",
         "description": "Options sub-title: 'HTML content'"
