--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -183,6 +183,10 @@
         "message": "名前を求めるプロンプト",
         "description": "Value for 'name conflict resolution' option: 'prompt for a name'"
     },
+    "optionFilenameConflictActionSkip": {
+        "message": "skip duplicate files",
+        "description": "Value for 'filename conflict resolution' option: 'skip duplicate files'"
+    },
     "optionsHTMLContentSubTitle": {
         "message": "HTML コンテンツ",
         "description": "Options sub-title: 'HTML content'"
