--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -183,6 +183,10 @@
         "message": "指定一個新名稱",
         "description": "Value for 'name conflict resolution' option: 'prompt for a name'"
     },
+    "optionFilenameConflictActionSkip": {
+        "message": "skip duplicate files",
+        "description": "Value for 'filename conflict resolution' option: 'skip duplicate files'"
+    },
     "optionsHTMLContentSubTitle": {
         "message": "HTML 內容",
         "description": "Options sub-title: 'HTML content'"
