--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -183,10 +183,10 @@
 		"message": "запросить новое имя",
 		"description": "Value for 'name conflict resolution' option: 'prompt for a name'"
 	},
-    "optionFilenameConflictActionSkip": {
-        "message": "skip duplicate files",
-        "description": "Value for 'filename conflict resolution' option: 'skip duplicate files'"
-    },
+	"optionFilenameConflictActionSkip": {
+		"message": "пропустить дублирующиеся файлы",
+		"description": "Value for 'filename conflict resolution' option: 'skip duplicate files'"
+	},
 	"optionsHTMLContentSubTitle": {
 		"message": "содержимое HTML",
 		"description": "Options sub-title: 'HTML content'"
