--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -196,7 +196,7 @@
         "description": "Options page label: 'compress HTML content'"
     },
     "optionInsertTextBody": {
-        "message": "make text searchable",
+        "message": "使文本可被搜索",
         "description": "Options page label: 'make text searchable'"
     },
     "optionRemoveImports": {
@@ -224,7 +224,7 @@
         "description": "Options page label: 'maximum idle time (ms)'"
     },
 	"optionLoadDeferredImagesKeepZoomLevel": {
-		"message": "zoom out the page",
+		"message": "缩小页面",
 		"description": "Options page label: 'zoom out the page'"
 	},
     "optionRemoveAlternativeImages": {
