--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -168,7 +168,7 @@
 		"description": "Options page label: 'open the \"Save as\" dialog to confirm the file name'"
 	},
 	"optionFilenameConflictAction": {
-		"message": "решение конфлика имён файлов",
+		"message": "решение конфликта имён файлов",
 		"description": "Options page label: 'filename conflict resolution'"
 	},
 	"optionFilenameConflictActionUniquify": {
